add: FunctionTypeCanonicalizer now supports any functional interfaces within one depth